force-app/src/objects/CTPISA__Outbound_Credit_Note_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>CTPISA__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CTPISA__Source_node_name__c</fullName>
        <label>Source node name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Target_Field_API_Name__c</fullName>
        <label>Target Field API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CTPISA__Target_Object_API_Name__c</fullName>
        <label>Target Object API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Outbound Credit Note Mapping</label>
    <listViews>
        <fullName>CTPISA__Data</fullName>
        <columns>MasterLabel</columns>
        <columns>CTPISA__Active__c</columns>
        <columns>CTPISA__Source_node_name__c</columns>
        <columns>CTPISA__Target_Field_API_Name__c</columns>
        <columns>CTPISA__Target_Object_API_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>Data</label>
    </listViews>
    <pluralLabel>Outbound Credit Note Mapping</pluralLabel>
</CustomObject>